--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.44",
+    "@types/react": "^18.0.12",
+    "@types/react-dom": "^18.0.5",
+    "firebase": "^9.8.3",
+    "firebase-tools": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "typescript": "^4.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "firebase emulators:exec --project sample 'react-scripts test'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
